crates/textweaver-theme/tests/snapshots/css__sepia_variables.snap
---
source: crates/textweaver-theme/tests/css.rs
expression: "variables(builtin::get(\"sepia\").unwrap())"
---
/* textweaver theme: Sepia */
:root {
  color-scheme: light;
  --tw-background: #f4ecd8;
  --tw-surface: #eadfc6;
  --tw-text: #3d2f1f;
  --tw-dim-text: #6d5c42;
  --tw-heading1: #8a4510;
  --tw-heading2: #6b4a20;
  --tw-heading3: #4f5d2f;
  --tw-heading4: #175e63;
  --tw-heading5: #175e63;
  --tw-heading6: #175e63;
  --tw-link: #14607a;
  --tw-code: #7a3b12;
  --tw-code-background: #eadfc6;
  --tw-quote: #6d5c42;
  --tw-error: #af0000;
  --tw-selection-fg: #e0d2b4;
  --tw-selection-bg: #3d2f1f;
  --tw-selection-weight: inherit;
  --tw-selection-decoration: none;
  --tw-selection-style: inherit;
  --tw-spoken-word-fg: #f4ecd8;
  --tw-spoken-word-bg: #8a4510;
  --tw-spoken-word-weight: bold;
  --tw-spoken-word-decoration: none;
  --tw-spoken-word-style: inherit;
  --tw-spoken-sentence-fg: #3d2f1f;
  --tw-spoken-sentence-bg: #e0d2b4;
  --tw-spoken-sentence-weight: inherit;
  --tw-spoken-sentence-decoration: underline;
  --tw-spoken-sentence-style: inherit;
  --tw-find-hit-fg: #f4ecd8;
  --tw-find-hit-bg: #4f5d2f;
  --tw-find-hit-weight: inherit;
  --tw-find-hit-decoration: underline;
  --tw-find-hit-style: inherit;
  --tw-current-find-hit-fg: #f4ecd8;
  --tw-current-find-hit-bg: #6b4a20;
  --tw-current-find-hit-weight: bold;
  --tw-current-find-hit-decoration: underline;
  --tw-current-find-hit-style: inherit;
  --tw-bookmark-fg: #175e63;
  --tw-bookmark-bg: transparent;
  --tw-bookmark-weight: bold;
  --tw-bookmark-decoration: underline;
  --tw-bookmark-style: inherit;
  --tw-note-fg: #7a3b12;
  --tw-note-bg: transparent;
  --tw-note-weight: inherit;
  --tw-note-decoration: underline;
  --tw-note-style: italic;
  --tw-status-bar-fg: #f4ecd8;
  --tw-status-bar-bg: #8a4510;
  --tw-status-bar-weight: bold;
  --tw-status-bar-decoration: none;
  --tw-status-bar-style: inherit;
  --tw-focus-fg: #f4ecd8;
  --tw-focus-bg: #14607a;
  --tw-focus-weight: bold;
  --tw-focus-decoration: none;
  --tw-focus-style: inherit;
  --tw-highlight-yellow-fg: #3d2f1f;
  --tw-highlight-yellow-bg: #f8e490;
  --tw-highlight-yellow-weight: bold;
  --tw-highlight-yellow-decoration: none;
  --tw-highlight-yellow-style: inherit;
  --tw-highlight-green-fg: #3d2f1f;
  --tw-highlight-green-bg: #b1dfac;
  --tw-highlight-green-weight: bold;
  --tw-highlight-green-decoration: none;
  --tw-highlight-green-style: inherit;
  --tw-highlight-blue-fg: #3d2f1f;
  --tw-highlight-blue-bg: #a2c8e6;
  --tw-highlight-blue-weight: bold;
  --tw-highlight-blue-decoration: none;
  --tw-highlight-blue-style: inherit;
  --tw-highlight-pink-fg: #3d2f1f;
  --tw-highlight-pink-bg: #f8bbc5;
  --tw-highlight-pink-weight: bold;
  --tw-highlight-pink-decoration: none;
  --tw-highlight-pink-style: inherit;
}
